# mclpy

./: LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: OOON-SPEC.md  WIKI-PLAN.md
docs-site/: mkdocs.yml
docs-site/docs/: glossary.md  index.md
docs-site/docs/explanation/: architecture.md  research.md
docs-site/docs/foundations/: declare-check-enforce.md  geoiot-in-one-picture.md  ontologies-for-json-devs.md  semantic-envelope.md  why-dashboards-lie.md
docs-site/docs/reference/: mcl-document.md  static-checks.md  validation-rules.md
docs-site/docs/start/: from-grafana.md  install.md
docs-site/docs/tutorials/: break-it.md  first-dashboard.md  own-ontology.md  policy-marks.md  real-data.md
docs-site/site/: 404.html  index.html  sitemap.xml
docs-site/site/explanation/architecture/: index.html
docs-site/site/explanation/research/: index.html
docs-site/site/foundations/declare-check-enforce/: index.html
docs-site/site/foundations/geoiot-in-one-picture/: index.html
docs-site/site/foundations/semantic-envelope/: index.html
docs-site/site/glossary/: index.html
docs-site/site/search/: search_index.json
examples/: custom_ontology.py  farm.ttl  local_resolver_app.py  ooon_live_demo.py  v2_energy_policy.mcl.json
src/mclpy/: __init__.py  builder.py  checks.py  cli.py  ontology.py  ooon.py  render.py  runtime.py  server.py
src/mclpy/ontologies/: geoiot.ttl
src/mclpy/schema/: mcl_schema.json  mcl_schema_v2.json
src/mclpy/templates/: dashboard.html
tests/: test_builder_and_checks.py  test_ooon.py  test_runtime_and_server.py
(+12 files in other folders)
