[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mclpy"
version = "0.1.0"
description = "Microservice Composition Language (MCL) for Python: declare ontology-bound, validated data interfaces and run them"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Abdelrhman Rayis" }]
keywords = ["mcl", "ontology", "semantic-web", "dashboard", "iot", "geospatial", "declarative-ui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "rdflib>=7.0",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn>=0.29", "requests>=2.31"]
dev = ["pytest>=8.0", "httpx>=0.27", "fastapi>=0.110", "uvicorn>=0.29", "requests>=2.31"]

[project.scripts]
mcl = "mclpy.cli:main"

[project.urls]
Homepage = "https://github.com/Abdelrhman-Rayis/mclpy"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mclpy = ["schema/*.json", "ontologies/*.ttl", "templates/*.html", "py.typed"]
